--- a/assets/front/scss/navigation/_headernav.scss
+++ b/assets/front/scss/navigation/_headernav.scss
@@ -22,7 +22,7 @@
         .navbar-brand {
             font-size: 1.75em;
             margin: 0;
-
+            vertical-align: middle;
             @at-root .navbar-brand img {
               width: auto;
               max-width: 100%;
